# url-shortener

./: .gitignore  Cargo.toml  GEMINI.md  README.md
BACKEND/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  FRONTEND_API_REFERENCE.md  GEMINI.md
BACKEND/migrations/: 20260218150000_create_url_analytics_table.sql  20260225120000_add_users_table.sql  20260302000000_fix_users_trigger.sql  20260302010000_click_count_to_bigint.sql
BACKEND/src/: config.rs  error.rs  main.rs  state.rs
BACKEND/src/handlers/: auth.rs  create.rs  health.rs  mod.rs  redirect.rs  stats.rs  url.rs
BACKEND/src/middleware/: auth.rs  rate_limit.rs
BACKEND/src/models/: google.rs  mod.rs  url.rs  user.rs
BACKEND/src/repository/: mod.rs  url_repo.rs  user_repo.rs
BACKEND/src/services/: generator.rs  google_auth.rs  mod.rs  safe_browsing.rs  url_service.rs  user_service.rs  validator.rs
BACKEND/src/utils/: password.rs  token.rs
FRONTEND/: .gitignore  BACKEND_REFERENCE.md  astro.config.mjs  package.json  pnpm-lock.yaml
FRONTEND/src/: env.d.ts  middleware.ts
FRONTEND/src/actions/: index.ts
FRONTEND/src/components/: Footer.astro  Header.astro
FRONTEND/src/components/Auth/: LoginForm.vue  RegisterForm.vue
FRONTEND/src/components/Dashboard/: DashboardFilters.vue  DashboardHeader.vue  DashboardManager.vue  UrlStats.vue  UrlStatsModal.vue  UrlTable.vue
FRONTEND/src/components/Hero/: HeroHeader.astro  ShortenResult.vue  UrlCard.vue  UrlForm.tsx  UrlForm.vue  UrlList.vue  UrlManager.vue  index.astro
FRONTEND/src/components/ui/: Input.vue  Logo.vue  ToastContainer.vue  UserMenu.vue
FRONTEND/src/components/ui/Button/: Button.tsx  (+4 more)
FRONTEND/src/composables/: useDashboard.ts  useFormSubmit.ts  useToast.ts  useUrlHistory.ts
FRONTEND/src/layouts/: AuthLayout.astro  Layout.astro  MainLayout.astro
FRONTEND/src/lib/: oauth.ts
FRONTEND/src/pages/: 404.astro  500.astro  [code].astro  dashboard.astro  error.astro  index.astro  login.astro  register.astro
FRONTEND/src/styles/: global.css
FRONTEND/src/types/: url.ts
FRONTEND/src/utils/: analytics.ts  formatters.ts
migrations/: 20260215004112_create_urls_table.sql
src/: config.rs  error.rs  main.rs
src/handlers/: create.rs  redirect.rs  stats.rs
src/middleware/: cors.rs  rate_limit.rs
src/models/: mod.rs  safe_url.rs  url.rs
src/repository/: url_repo.rs
src/services/: generator.rs  mod.rs  url_service.rs  validator.rs
(+7 files in other folders)
